add text about this programme

--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -146,22 +146,10 @@
             <div class="block"><img src="images/programmes/about_median.JPG" class="img-responsive Prog_Image">
                 <div class="abtProg_description #fp-nav">
                     <h1 class="prog-title">About This Programme</h1>
-                    <p>The Programme, entitled “Master of Social Sciences in Media Management”, is jointly offered by the School
-                        of Communication and the School of Business at Hong Kong Baptist University.</p>
-                    <p>Taking advantage of the expertise of the faculty of both Schools, the Programme integrates state-of-the-art
-                        knowledge about media and management in its programme design for the education of media professionals
-                        for executive leadership in the media industry.</p>
-                    <p>Students will be immersed in holistic studies of the overall media environment and management strategies
-                        with a view to applying the knowledge and skills in media operations.</p>
-                    <p>As a professional degree built upon solid research foundation, the Programme emphasizes both thinking
-                        and application in media management and serves both the media industry and the society by educating
-                        confident and competent media managers. Located in strategic Hong Kong, the Programme is geared to
-                        the challenges of rapid media development in the Pan-Chinese region and a globalizing world.</p>
-                    <p>The programme aims to develop professionals’ conceptual and analytical skills in applying state-of-art
-                        media and management research knowledge; to discipline media professionals with leadership and management
-                        acumen; to cultivate media professionals to become executive leaders in the media industry; and to
-                        lay a foundation for those interested in further advanced studies in media or management.
-                    </p>
+                    <p>The new programme aims to provide students with cutting-edge interdisciplinary knowledge of and skills in AI and media communication needed for the computational and digital age. Students are expected to become proficient in essential aspects of data-driven research, story-telling, branding and promotion, audience engagement and editorial decision-making. Students are also expected to be able to apply these data media and communications skills to produce analytics, solutions and insights for media organizations and others in or connected to the industry. Grounded in an academic core of several theoretical and methodological courses, the Programme offers a wide range of elective courses focusing on knowledge and practice in media institutions and operations in the context of the digital transition. These combinations of courses have been chosen with the specific goal of nurturing high-quality, ethical professionals and managerial personnel in the media and communication industry. </p>
+                    <p>All students are required to complete a total of 30 credits (i.e. 15 credits of core courses and 15 credits of elective courses) for the award of this MSc degree. </p>
+                    <p>The courses include bridging courses, core courses, core elective courses, and free elective course. The bridging courses offer fundamentals of communication research and programming skills. The core courses provide students with a coherent understanding of the discipline of AI, and several important applications of AI in the field of media and communication. Students will learn several hands-on skills on AI and digital media via project-based course works. The core elective courses offer more flexibility for a tailor-made course structure for students with different strengths and needs. The free elective courses are designed to be practical and help students to build up their skills-set in particular area(s) of AI and digital media.</p>
+                    <p>This Programme has different versions of study plans for students with different background. An advisory system will be established to help students from different academic background to understand the structure of the Programme, and select their study plans prior to the commencement of the first semester. </p>
                 </div>
                 <div class="abtProg_hImage hidden-xs hidden-sm"><img src="images/programmes/about1.jpg">
                 </div>
