add course-mmai page

--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -170,7 +170,7 @@
                         Project which is optional and can be replaced by 2 extra Elective Courses. </p>
                     <p>As a high quality professional programme, the Programme has designed its syllabi to illustrate how theory
                         and research can be applied to the solution of various media and management problems.</p>
-                    <a href="course/course-mmgt.html" target="_blank">
+                    <a href="course/course-mmai.html" target="_blank">
                         <div class="external-url">Browse Course Structure</div>
                     </a>
                 </div>
