--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -165,11 +165,201 @@
             <div class="block"><div class="block"><img src="images/programmes/design.JPG" class="img-responsive Prog_Image">
                 <div class="curriculum_description curriculum_mmai">
                     <h1 class="prog-title">Curriculum Design</h1>
-                    <p>Taking effect from 2013/2014 intake, the Programme requires a minimum of 28 credit units of coursework
-                        of which 12 credit units are from Core Courses, 12 units of Elective Courses, and 4 units of Application
-                        Project which is optional and can be replaced by 2 extra Elective Courses. </p>
-                    <p>As a high quality professional programme, the Programme has designed its syllabi to illustrate how theory
-                        and research can be applied to the solution of various media and management problems.</p>
+                    <h4><strong>Semester 1: </strong></h4>
+                    <ul>
+                        <li>Plan 1: For students with <strong>computer science background</strong>: 15 credits = 1 bridging course (B1) + 1 core course (C1) + 1 core elective course + 2 free elective courses  </li>
+                    </ul>
+                    <table style="width:100%; padding-left:10px;">
+                        <tbody>
+                            <tr>
+                                <td colspan="3"><strong>Schedule 1: Computer Science Background</strong></td>
+                            </tr>
+                            <tr>
+                                <td><strong>Course Title</strong></td>
+                                <td><strong>Course Type</strong></td>
+                                <td><strong>Units</strong></td>
+                            </tr>
+                            <tr>
+                                <td>B1: Basics in Media and Communication</td>
+                                <td>Bridging</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>C1: AI for Digital Media</td>
+                                <td>Core</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                        <strong>One</strong> from the Core Elective Courses: <br>
+                                        <ol>
+                                            <li>CE1: Big Data Management and Analytics </li>
+                                            <li>CE2: Data Mining & Knowledge Discovery for Digital Media </li>
+                                        </ol>
+                                </td>
+                                <td>Core Elective</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Two</strong> Free Elective Courses from the course list </td>
+                                <td>Free Elective</td>
+                                <td>6</td>
+                            </tr>
+                            <br>
+                        </tbody>
+                    </table>
+                    <br>
+                    <ul>
+                        <li>Plan 2: For students with <strong>media and communication background</strong>: 15 credits = 1 bridging course (B2) + 1 core course (C1) + 1 core elective course + 2 free elective courses  </li>
+                    </ul>
+                    <table style="width:100%; padding-left:10px;">
+                        <tbody>
+                            <tr>
+                                <td colspan="3"><strong>Schedule 2: Media and Communication Background</strong></td>
+                            </tr>
+                            <tr>
+                                <td><strong>Course Title</strong></td>
+                                <td><strong>Course Type</strong></td>
+                                <td><strong>Units</strong></td>
+                            </tr>
+                            <tr>
+                                <td>B2: Basic Programming for Data Science</td>
+                                <td>Bridging</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>C1: AI for Digital Media</td>
+                                <td>Core</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                        <strong>One</strong> from the Core Elective Courses: <br>
+                                        <ol>
+                                            <li>CE1: Big Data Management and Analytics</li>
+                                            <li>CE2: Data Mining & Knowledge Discovery for Digital Media</li>
+                                        </ol>
+                                </td>
+                                <td>Core Elective</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Two</strong> Free Elective Courses from the course list </td>
+                                <td>Free Elective</td>
+                                <td>6</td>
+                            </tr>
+                            <br>
+                        </tbody>
+                    </table>
+                    <br>
+                    <ul>
+                        <li>Plan 3: For students from other background: 15 credits = 2 bridging courses (B1 + B2) + 1 core course (C1) + 1 core elective course + 1 free elective courses</li>
+                    </ul>
+                    <table style="width:100%; padding-left:10px;">
+                        <tbody>
+                            <tr>
+                                <td><strong>Course Title</strong></td>
+                                <td><strong>Course Type</strong></td>
+                                <td><strong>Units</strong></td>
+                            </tr>
+                            <tr>
+                                <td>B1: Basics in Media and Communication</td>
+                                <td>Bridging</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>B2: Basic Programming for Data Science</td>
+                                <td>Bridging</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>C1: AI for Digital Media</td>
+                                <td>Core</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                        <strong>One</strong> from the Core Elective Courses: <br>
+                                        <ol>
+                                            <li>CE1: Big Data Management and Analytics</li>
+                                            <li>CE2: Data Mining & Knowledge Discovery for Digital Media</li>
+                                        </ol>
+                                </td>
+                                <td>Core Elective</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Two</strong> Free Elective Courses from the course list </td>
+                                <td>Free Elective</td>
+                                <td>6</td>
+                            </tr>
+                            <br>
+                        </tbody>
+                    </table>
+
+                    <h4><strong>Semester 2:</strong></h4>
+                    <ul>
+                        <li><strong>For all students</strong>: 15 credits = 1 core courses (C2) + 1 core elective course + 3 free elective courses  </li>
+                    </ul>
+                    <table style="width:100%; padding-left:10px;">
+                        <tbody>
+                            <tr>
+                                <td><strong>Course Title</strong></td>
+                                <td><strong>Course Type</strong></td>
+                                <td><strong>Units</strong></td>
+                            </tr>
+                            <tr>
+                                <td>C2: AI and Digital Media Workshop </td>
+                                <td>Core</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <strong>One</strong> from the Core Elective Courses: <br>
+                                    <ol>
+                                        <li>CE3: AI Theories and Applications </li>
+                                        <li>CE4: Recommender Systems for Digital Media </li>
+                                    </ol>
+                                </td>
+                                <td>Core Elective</td>
+                                <td>3</td>
+                            </tr>
+                            <tr>
+                                <td><strong>Three</strong> Free Elective Courses from the course list </td>
+                                <td>Free Elective</td>
+                                <td>9</td>
+                            </tr>
+                            <br>
+                        </tbody>
+                    </table>
+
+                    <br>
+                    <h4>A list of core elective and free elective courses</h4>
+                    <table style="width:100%; padding-left:10px;">
+                        <tbody>
+                            <tr>
+                                <td><strong>Course Title</strong></td>
+                                <td><strong>Course Type</strong></td>
+                                <td><strong>Units</strong></td>
+                            </tr>
+                            <tr><td>Big Data Management and Analytics</td><td>Core Elective</td><td>3</td></tr>
+                            <tr><td>AI Theories and Applications</td><td>Core Elective </td><td>3</td></tr>
+                            <tr><td>Recommender Systems for Digital Media</td><td>Core Elective </td><td>3</td></tr>
+                            <tr><td>Data Mining & Knowledge Discovery for Digital Media</td><td>Core Elective </td><td>3</td></tr>
+                            <tr><td>Data Analysis and Visualization Studio</td><td>Free Elective </td><td>3 </td></tr>
+                            <tr><td>Computational Journalism  </td><td>Free Elective </td><td>3</td></tr>
+                            <tr><td>Emerging Technology for Media and Communication </td><td>Free Elective </td><td>3</td></tr>
+                            <tr><td>News and Feature Writing for Digital Media </td><td>Free Elective </td><td>3</td></tr>
+                            <tr><td>Media Communications and Psychology</td><td>Free Elective </td><td>3</td></tr>
+                            <tr><td>Algorithmic Culture </td><td>Free Elective </td><td>3</td></tr>
+                            <tr><td>Media Communications and Biology</td><td>Free Elective </td><td>3</td></tr>
+                            <tr><td>Social Media and Online Social Networks </td><td>Free Elective </td><td>3</td></tr>
+                            <tr><td>Visual Analytics and Decision Support for Digital Media </td><td>Free Elective </td><td>3</td></tr>
+                            <tr><td>Dynamic Web & Mobile Programming for Digital Media</td><td>Free Elective </td><td>3</td></tr>
+                            <tr><td>Digital Media Research Project </td><td>Free Elective </td><td>3</td></tr>
+                        </tbody>
+                    </table>
+                    <br>
                     <a href="course/course-mmai.html" target="_blank">
                         <div class="external-url">Browse Course Structure</div>
                     </a>
