change table border

--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -27,7 +27,18 @@
     type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 
-
+    <style>
+    #section3 table, #section3 td{
+        border: 1px solid white;
+        border-collapse: collapse;
+    }
+    #section3 td{
+        padding: 5px;
+    }
+    #section3 h4{
+        color: #fecb30;
+    }
+    </style>
     
 
 </head>
