change jpg to JPG

--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -162,9 +162,9 @@
                     <p>The courses include bridging courses, core courses, core elective courses, and free elective course. The bridging courses offer fundamentals of communication research and programming skills. The core courses provide students with a coherent understanding of the discipline of AI, and several important applications of AI in the field of media and communication. Students will learn several hands-on skills on AI and digital media via project-based course works. The core elective courses offer more flexibility for a tailor-made course structure for students with different strengths and needs. The free elective courses are designed to be practical and help students to build up their skills-set in particular area(s) of AI and digital media.</p>
                     <p>This Programme has different versions of study plans for students with different background. An advisory system will be established to help students from different academic background to understand the structure of the Programme, and select their study plans prior to the commencement of the first semester. </p>
                 </div>
-                <div class="abtProg_hImage hidden-xs hidden-sm"><img src="images/programmes/about1.jpg">
+                <div class="abtProg_hImage hidden-xs hidden-sm"><img src="images/programmes/about1.JPG">
                 </div>
-                <div class="abtProg_vImage hidden-xs hidden-sm"><img src="images/programmes/about2.jpg">
+                <div class="abtProg_vImage hidden-xs hidden-sm"><img src="images/programmes/about2.JPG">
                 </div>
             </div>
         </div>
