change pic format

--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -795,7 +795,7 @@
 
     <div class="section" id="section5">
         <div id="prog-Admissions" class="container row">
-            <div class="block"><img src="images/programmes/ad_median.jpg" class="img-responsive Prog_Image">
+            <div class="block"><img src="images/programmes/ad_median.JPG" class="img-responsive Prog_Image">
                 <div class="requirments_description Admissions_mmai">
                     <h1 class="prog-title">Admission Requirements</h1>
                     <p>Applicants should normally:
