--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -99,7 +99,7 @@
     <div id="top-slides">
         <ul class="slides-container">
             <li>
-                <img src="images/bg_mmai.JPG" alt="MSocSc In Media Management" class="img-opacity">
+                <img src="images/bg_mmai.JPG" alt="MSocSc In AI and Digital Media" class="img-opacity">
                 <div class="container in-slide-content">
                     <p class="sub-title">POSTGRADUATE PROGRAMMES</p>
                     <h2 class="ma-title title-stroke" ><span class="small-letters">MSC</span> IN AI AND DIGITAL MEDIA</h2>
@@ -112,7 +112,7 @@
         </ul>
     </div>
 					<div class="row progheader">
-                        <img class="img-opacity" src="images/bg_mmai2.JPG" alt="MSocSc In Media Management" class="img-responsive">
+                        <img class="img-opacity" src="images/bg_mmai2.JPG" alt="MSocSc In AI and Digital Media" class="img-responsive">
 						<div class="container in-image-content">
 							<p class="sub-title">POSTGRADUATE PROGRAMMES</p>
 							<h2 class="ma-title mmai"><span class="small-letters">MSC</span> IN AI AND DIGITAL MEDIA</h2>
@@ -132,7 +132,8 @@
     </a>
 
 
-    <div id="section1" class="section hidden-xs">
+    <div id="section1" class="section">
+         <!-- hidden-xs class removed-->
         <div id="prog-Director" class="container row">
             <a href="https://iss.hkbu.edu.hk/amsappl_pg/welcome.jsf" target="_blank">
                 <div class="applynow_prog bg-mmai">Apply NOW</div>
