--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -48,7 +48,8 @@
             3px 3px 0 #fecb30; */
     }
     .title-row td{
-        background-color: rgba(120, 120, 120, 1)
+        background-color: rgba(120, 120, 120, 1);
+        text-align: center;
     }
     .img-opacity{
         opacity: 0.5;
@@ -191,176 +192,44 @@
     <div class="section" id="section3">
         <div id="prog-Curriculum" class="container row">
             <div class="block"><div class="block"><img src="images/programmes/design.JPG" class="img-responsive Prog_Image">
-                <div class="curriculum_description curriculum_mmai">
-                    <h1 class="prog-title">Curriculum Design</h1>
-                    <h4><strong>Semester 1: </strong></h4>
-                    <ul>
-                        <li>Plan 1: For students with <strong>computer science background</strong>: 15 credits = 1 bridging course (B1) + 1 core course (C1) + 1 core elective course + 2 free elective courses  </li>
-                    </ul>
-                    <table style="width:100%; padding-left:10px;">
-                        <tbody>
-                            <tr>
-                                <td colspan="3"><strong>Schedule 1: Computer Science Background</strong></td>
-                            </tr>
-                            <tr class="title-row">
-                                <td><strong>Course Title</strong></td>
-                                <td><strong>Course Type</strong></td>
-                                <td><strong>Units</strong></td>
-                            </tr>
-                            <tr>
-                                <td>B1: Basics in Media and Communication</td>
-                                <td>Bridging</td>
-                                <td>3</td>
-                            </tr>
-                            <tr>
-                                <td>C1: AI for Digital Media</td>
-                                <td>Core</td>
-                                <td>3</td>
-                            </tr>
-                            <tr>
-                                <td>
-                                        <strong>One</strong> from the Core Elective Courses: <br>
-                                        <ol>
-                                            <li>CE1: Big Data Management and Analytics </li>
-                                            <li>CE2: Data Mining & Knowledge Discovery for Digital Media </li>
-                                        </ol>
-                                </td>
-                                <td>Core Elective</td>
-                                <td>3</td>
-                            </tr>
-                            <tr>
-                                <td><strong>Two</strong> Free Elective Courses from the course list </td>
-                                <td>Free Elective</td>
-                                <td>6</td>
-                            </tr>
-                            <br>
-                        </tbody>
-                    </table>
-                    <br>
-                    <ul>
-                        <li>Plan 2: For students with <strong>media and communication background</strong>: 15 credits = 1 bridging course (B2) + 1 core course (C1) + 1 core elective course + 2 free elective courses  </li>
-                    </ul>
-                    <table style="width:100%; padding-left:10px;">
-                        <tbody>
-                            <tr>
-                                <td colspan="3"><strong>Schedule 2: Media and Communication Background</strong></td>
-                            </tr>
-                            <tr class="title-row">
-                                <td><strong>Course Title</strong></td>
-                                <td><strong>Course Type</strong></td>
-                                <td><strong>Units</strong></td>
-                            </tr>
-                            <tr>
-                                <td>B2: Basic Programming for Data Science</td>
-                                <td>Bridging</td>
-                                <td>3</td>
-                            </tr>
-                            <tr>
-                                <td>C1: AI for Digital Media</td>
-                                <td>Core</td>
-                                <td>3</td>
-                            </tr>
-                            <tr>
-                                <td>
-                                        <strong>One</strong> from the Core Elective Courses: <br>
-                                        <ol>
-                                            <li>CE1: Big Data Management and Analytics</li>
-                                            <li>CE2: Data Mining & Knowledge Discovery for Digital Media</li>
-                                        </ol>
-                                </td>
-                                <td>Core Elective</td>
-                                <td>3</td>
-                            </tr>
-                            <tr>
-                                <td><strong>Two</strong> Free Elective Courses from the course list </td>
-                                <td>Free Elective</td>
-                                <td>6</td>
-                            </tr>
-                            <br>
-                        </tbody>
-                    </table>
-                    <br>
-                    <ul>
-                        <li>Plan 3: For students from other background: 15 credits = 2 bridging courses (B1 + B2) + 1 core course (C1) + 1 core elective course + 1 free elective courses</li>
-                    </ul>
-                    <table style="width:100%; padding-left:10px;">
-                        <tbody>
-                            <tr class="title-row">
-                                <td><strong>Course Title</strong></td>
-                                <td><strong>Course Type</strong></td>
-                                <td><strong>Units</strong></td>
-                            </tr>
-                            <tr>
-                                <td>B1: Basics in Media and Communication</td>
-                                <td>Bridging</td>
-                                <td>3</td>
-                            </tr>
-                            <tr>
-                                <td>B2: Basic Programming for Data Science</td>
-                                <td>Bridging</td>
-                                <td>3</td>
-                            </tr>
-                            <tr>
-                                <td>C1: AI for Digital Media</td>
-                                <td>Core</td>
-                                <td>3</td>
-                            </tr>
-                            <tr>
-                                <td>
-                                        <strong>One</strong> from the Core Elective Courses: <br>
-                                        <ol>
-                                            <li>CE1: Big Data Management and Analytics</li>
-                                            <li>CE2: Data Mining & Knowledge Discovery for Digital Media</li>
-                                        </ol>
-                                </td>
-                                <td>Core Elective</td>
-                                <td>3</td>
-                            </tr>
-                            <tr>
-                                <td><strong>Two</strong> Free Elective Courses from the course list </td>
-                                <td>Free Elective</td>
-                                <td>6</td>
-                            </tr>
-                            <br>
-                        </tbody>
-                    </table>
-
-                    <h4><strong>Semester 2:</strong></h4>
-                    <ul>
-                        <li><strong>For all students</strong>: 15 credits = 1 core courses (C2) + 1 core elective course + 3 free elective courses  </li>
-                    </ul>
-                    <table style="width:100%; padding-left:10px;">
-                        <tbody>
-                            <tr class="title-row">
-                                <td><strong>Course Title</strong></td>
-                                <td><strong>Course Type</strong></td>
-                                <td><strong>Units</strong></td>
-                            </tr>
-                            <tr>
-                                <td>C2: AI and Digital Media Workshop </td>
-                                <td>Core</td>
-                                <td>3</td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <strong>One</strong> from the Core Elective Courses: <br>
-                                    <ol>
-                                        <li>CE3: AI Theories and Applications </li>
-                                        <li>CE4: Recommender Systems for Digital Media </li>
-                                    </ol>
-                                </td>
-                                <td>Core Elective</td>
-                                <td>3</td>
-                            </tr>
-                            <tr>
-                                <td><strong>Three</strong> Free Elective Courses from the course list </td>
-                                <td>Free Elective</td>
-                                <td>9</td>
-                            </tr>
-                            <br>
-                        </tbody>
-                    </table>
-
+                <div class="curriculum_description curriculum_mmai" >
+                    <div style="overflow:scroll;">
+                        <h1 class="prog-title">Curriculum Design</h1>
+                        <h4>Schedule</h4>
+                        <table style="width:100%; padding-left:10px;">
+                            <tbody>
+                                <tr class="title-row">
+                                    <td><strong>Student background</strong></td>
+                                    <td colspan="3"><strong>Semester 1</strong></td>
+                                    <td><strong>Semester 2</strong></td>
+                                </tr>
+                                <tr>
+                                    <td>Computer Science</td>
+                                    <td>Bridging Course: Basics in Media and Communication</td>
+                                    <td>Core Course: AI for Digital Media</td>
+                                    <td>At least one core elective course <br>At least one free elective course</td>
+                                    <td rowspan="3" style="text-align:center">Core Course: AI and Digital Media Workshop<br>Four core elective / free elective courses</td>
+                                </tr>
+                                <tr>
+                                    <td>Media and Communication</td>
+                                    <td>Bridging Course: Basic Programming for Data Science</td>
+                                    <td>Core Course: AI for Digital Media</td>
+                                    <td>At least one core elective course <br>At least one free elective course</td>
+                                </tr>
+                                <tr>
+                                    <td>Others</td>
+                                    <td>Bridging Course: Basics in Media and Communication <br> Bridging Course: Basic Programming for Data Science</td>
+                                    <td>Core Course: AI for Digital Media</td>
+                                    <td>At least one core elective course <br>At least one free elective course</td>
+                                </tr>
+                                <tr class="title-row">
+                                    <td>Total Units: </td>
+                                    <td colspan="3">15 (five courses)</td>
+                                    <td >15 (five courses)</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
                     <br>
                     <h4>A list of core elective and free elective courses</h4>
                     <table style="width:100%; padding-left:10px;">
