--- a/masters/en/course/course-mmai.html
+++ b/masters/en/course/course-mmai.html
@@ -46,7 +46,7 @@
 <!-- Scroll to top end-->
     <div class="container-fluid">
         <div>
-            <h4 class="mmai">MS<span class="small-letters">oc</span>S<span class="small-letters">c</span> in Media Management / Course Structure</h4>
+            <h4 class="mmai">MS<span class="small-letters"></span><span class="small-letters">c</span> in AI and Digital Media / Course Structure</h4>
         </div>
         <div class="course-table">
             <div class="col-lg-12 ProgStru">
