--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -39,8 +39,8 @@
         color: #fecb30;
     }
     .title-stroke{
-        color: white;
-        -webkit-text-stroke: 3px #fecb30;
+        color: #fecb30;
+        /* -webkit-text-stroke: 3px #; */
         /* text-shadow:
             -3px -3px 0 #fecb30,  
             3px -3px 0 #fecb30,
@@ -52,8 +52,8 @@
         text-align: center;
     }
     .img-opacity{
-        opacity: 0.5;
-        filter: alpha(opacity=50); /* For IE8 and earlier */
+        /* opacity: 0.5;
+        filter: alpha(opacity=50);  */
     }
     </style>
     
@@ -113,7 +113,7 @@
         </ul>
     </div>
 					<div class="row progheader">
-                        <img class="img-opacity" src="images/bg_mmai2.JPG" alt="MSocSc In AI and Digital Media" class="img-responsive">
+                        <img class="img-opacity" src="images/bg_mmai.JPG" alt="MSocSc In AI and Digital Media" class="img-responsive">
 						<div class="container in-image-content">
 							<p class="sub-title">POSTGRADUATE PROGRAMMES</p>
 							<h2 class="ma-title mmai"><span class="small-letters">MSC</span> IN AI AND DIGITAL MEDIA</h2>
@@ -146,25 +146,26 @@
             </div>
             <div id="message-directors" class="col-lg-8 col-md-8 col-sm-8 col-xs-12">
                 <h1 class="prog-title-bk">Message From Directors</h1>
-                <p>Dear students,</p>
                 <p>Artificial intelligence (AI), which refers to computer systems that are able to perform tasks that could once only be done by humans, is revolutionizing our whole way of life, but it is having a particularly deep effect on the landscape of the digital media industry, changing it in every aspect. AI technologies are appearing in computational journalism, computer-assisted editorial judgement, multimedia processing, machine learning, recommender systems, search engines, immersive media, social media bots, robot reporters, and automated content-generation and -promotion systems. AI is even changing audience behavior. </p>
                 <p>Digitization has brought us interactive social media and portable communication devices that allow ordinary users to provide content themselves in an informal way, but as media professionals start using the disruptive technologies of AI to locate, acquire and process material for news investigation and storytelling, audiences are becoming an integral part of the content generation process. The interplay between human and machine is shaping both sets of actors simultaneously. Critical reflection on the legal, moral and ethical issues of these developments has also come to the fore, with growing concerns about fake news and misinformation, algorithm-driven audience polarization, privacy protection, the surveillance society, news professionalism and the ever-enlarging knowledge gap and digital divide. </p>
                 <p>This MSc in AI and Digital Media is Hong Kong’s first full-fledged interdisciplinary taught postgraduate programme focusing on the application of big data analytics and AI for media and communication. The Programme is offered by the School of Communication and supported by the Department of Computer Science at the Faculty of Science, Hong Kong Baptist University. The School of Communication was originally founded in 1968. It provides a comprehensive range of programmes in communication available in Hong Kong at the undergraduate and postgraduate level. It is one of the important journalism education bases in Hong Kong. The Department of Computer Science under the Faculty of Science has been around for almost three decades. The Department is particularly strong in the areas of Databases, Computational Intelligence, Pattern Recognition, Machine Learning and Networking.</p>
                 <p>The new programme is expected to facilitate more teaching and research so that AI can serve the social good in a broader sense, bringing it to bear on well-being, e-health, smart city, cultural preservation and cultural diversity. </p>
                 <p>Welcome to join us!</p>
                 <br>
-                <p>Dr. Xinzhi ZHANG
-                    <br> Research Assistant Professor, 
-                    <br> Director of MSc in AI and Digital Media, School of Communication, 
-                    <br> Director of Data and Media Communication, BSoSc (Hons) in Communication, 
-                    <br> Department of Journalism, School of Communication
-                </p>
-                <p>Dr. Li CHEN
-                    <br> Associate Professor, 
-                    <br> Director of MSc in AI and Digital Media, School of Communication, 
-                    <br> Concentration Coordinator of Data and Media Communication, BSc (Hons) in Computer Science
-                    <br> Department of Computer Science, Faculty of Science
-                </p>
+                <div class="col-md-12">
+                    <p class="col-md-6"><strong>Dr. Xinzhi ZHANG</strong>
+                        <br> Research Assistant Professor, 
+                        <br> Director of MSc in AI and Digital Media, School of Communication, 
+                        <br> Director of Data and Media Communication, BSoSc (Hons) in Communication, 
+                        <br> Department of Journalism, School of Communication
+                    </p>
+                    <p class="col-md-6"><strong>Dr. Li CHEN</strong>
+                        <br> Associate Professor, 
+                        <br> Director of MSc in AI and Digital Media, School of Communication, 
+                        <br> Concentration Coordinator of Data and Media Communication, BSc (Hons) in Computer Science
+                        <br> Department of Computer Science, Faculty of Science
+                    </p>
+                </div>
             </div>
         </div>
     </div>
@@ -205,32 +206,32 @@
                                 </tr>
                                 <tr>
                                     <td>Computer Science</td>
-                                    <td>Bridging Course: Basics in Media and Communication</td>
-                                    <td>Core Course: AI for Digital Media</td>
-                                    <td>At least one core elective course <br>At least one free elective course</td>
-                                    <td rowspan="3" style="text-align:center">Core Course: AI and Digital Media Workshop<br>Four core elective / free elective courses</td>
+                                    <td>Basics in Media and Communication</td>
+                                    <td rowspan="3">AI for Digital Media</td>
+                                    <td rowspan="3">At least one core elective<br><br>At least one free elective</td>
+                                    <td rowspan="3" style="text-align:center">AI and Digital Media Workshop<br><br>Four core elective / free elective courses</td>
                                 </tr>
                                 <tr>
                                     <td>Media and Communication</td>
-                                    <td>Bridging Course: Basic Programming for Data Science</td>
-                                    <td>Core Course: AI for Digital Media</td>
-                                    <td>At least one core elective course <br>At least one free elective course</td>
+                                    <td>Basic Programming for Data Science</td>
+                                    <!-- <td>AI for Digital Media</td> -->
+                                    <!-- <td>At least one core elective<br><br>At least one free elective</td> -->
                                 </tr>
                                 <tr>
                                     <td>Others</td>
-                                    <td>Bridging Course: Basics in Media and Communication <br> Bridging Course: Basic Programming for Data Science</td>
-                                    <td>Core Course: AI for Digital Media</td>
-                                    <td>At least one core elective course <br>At least one free elective course</td>
+                                    <td>Basics in Media and Communication <br> <br>Basic Programming for Data Science</td>
+                                    <!-- <td>AI for Digital Media</td> -->
+                                    <!-- <td>At least one core elective<br><br>At least one free elective</td> -->
                                 </tr>
                                 <tr class="title-row">
-                                    <td>Total Units: </td>
-                                    <td colspan="3">15 (five courses)</td>
-                                    <td >15 (five courses)</td>
+                                    <td><strong>Total Units</strong></td>
+                                    <td colspan="3"><strong>15 (five courses)</strong></td>
+                                    <td ><strong>15 (five courses</strong>)</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
-                    <br>
+                    <!-- <br>
                     <h4>A list of core elective and free elective courses</h4>
                     <table style="width:100%; padding-left:10px;">
                         <tbody>
@@ -255,8 +256,9 @@
                             <tr><td>Dynamic Web & Mobile Programming for Digital Media</td><td>Free Elective </td><td>3</td></tr>
                             <tr><td>Digital Media Research Project </td><td>Free Elective </td><td>3</td></tr>
                         </tbody>
-                    </table>
+                    </table> -->
                     <br>
+                    <p>For a detailed course list, please refer to the course structure list.</p>
                     <a href="course/course-mmai.html" target="_blank">
                         <div class="external-url">Browse Course Structure</div>
                     </a>
