--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -100,7 +100,7 @@
     <div id="top-slides">
         <ul class="slides-container">
             <li>
-                <img src="images/bg_mmai.JPG" alt="MSocSc In AI and Digital Media" class="img-opacity">
+                <img src="images/bg_mmai_masked.jpg" alt="MSocSc In AI and Digital Media" class="img-opacity">
                 <div class="container in-slide-content">
                     <p class="sub-title">POSTGRADUATE PROGRAMMES</p>
                     <h2 class="ma-title title-stroke" ><span class="small-letters">MSC</span> IN AI AND DIGITAL MEDIA</h2>
@@ -113,7 +113,7 @@
         </ul>
     </div>
 					<div class="row progheader">
-                        <img class="img-opacity" src="images/bg_mmai.JPG" alt="MSocSc In AI and Digital Media" class="img-responsive">
+                        <img class="img-opacity" src="images/bg_mmai_masked.jpg" alt="MSocSc In AI and Digital Media" class="img-responsive">
 						<div class="container in-image-content">
 							<p class="sub-title">POSTGRADUATE PROGRAMMES</p>
 							<h2 class="ma-title mmai"><span class="small-letters">MSC</span> IN AI AND DIGITAL MEDIA</h2>
