add new profile entries

--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -319,6 +319,40 @@
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"><img src="../images/staff/ppl_william-cheung.png" class="profile-image img-responsive">
+                            </div>
+                            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 profile-desc">
+                                <h5 style="margin-top: 5px"><a href="https://www.comp.hkbu.edu.hk/v1/?page=profile&id=william" target="_blank">
+                                    Dr. CHEUNG, William Kwok Wai</a></h5>
+                                <p class="staff-post">Head and Associate Professor</p>
+                                <p class="staff-details">E: <a href="mailto:william@comp.hkbu.edu.hk">william@comp.hkbu.edu.hk</a>
+                                </p>
+                                <p class="staff-details">T: (852) 3411 2387</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"><img src="../images/staff/profile_li-chen.jpg" class="profile-image img-responsive">
+                            </div>
+                            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 profile-desc">
+                                <h5 style="margin-top: 5px"><a href="https://www.comp.hkbu.edu.hk/v1/?page=profile&id=lichen" target="_blank">Dr. CHEN, Li </a></h5>
+                                <p class="staff-post">Associate Professor</p>
+                                <p class="staff-details">E: <a href="mailto:lichen@comp.hkbu.edu.hk">lichen@comp.hkbu.edu.hk</a>
+                                </p>
+                                <p class="staff-details">T: (852) 3411 7090</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
+                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"><img src="../images/staff/ppl_martin-choi.png" class="profile-image img-responsive">
+                            </div>
+                            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 profile-desc">
+                                <h5 style="margin-top: 5px"><a href="https://www.comp.hkbu.edu.hk/v1/?page=profile&id=mtchoy" target="_blank">Dr. CHOY, Martin Man Ting</a></h5>
+                                <p class="staff-post">Lecturer</p>
+                                <p class="staff-details">E: <a href="mailto:mtchoy@comp.hkbu.edu.hk">mtchoy@comp.hkbu.edu.hk</a>
+                                </p>
+                                <p class="staff-details">T: (852) 3411 7460</p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"><img src="../images/staff/ppl_celine-song.jpg" class="profile-image img-responsive">
                             </div>
                             <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 profile-desc">
@@ -350,6 +384,13 @@
                                 </p>
                                 <p class="staff-details">T: (852) 5167 5239</p>
                             </div>
+                        </div>
+                    </div>
+
+                    <div class="item">
+
+                        <div class="container text-center">
+                            <h1 class="staff-title mmai">Faculty & Staff</h1>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"><img src="../images/staff/ppl_jolie-shi.png" class="profile-image img-responsive">
@@ -384,14 +425,6 @@
                                 <p class="staff-details">T: 3411 8161 </p>
                             </div>
                         </div>
-
-                    </div>
-
-                    <div class="item">
-
-                        <div class="container text-center">
-                            <h1 class="staff-title mmai">Faculty & Staff</h1>
-                        </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4"><img src="../images/staff/ppl_stephanie-tsang.jpg" class="profile-image img-responsive">
                             </div>
@@ -423,39 +456,6 @@
                                 <p class="staff-details">E:<a href="mailto:swcheung@hkbu.edu.hk"> swcheung@hkbu.edu.hk</a>
                                 </p>
                                 <p class="staff-details">T: (852) 3411 8209</p>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
-                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                            </div>
-                            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 profile-desc">
-                                <h5></h5>
-                                <p class="staff-post"></p>
-                                <p class="staff-details">
-                                </p>
-                                <p class="staff-details"></p>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
-                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                            </div>
-                            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 profile-desc">
-                                <h5></h5>
-                                <p class="staff-post"></p>
-                                <p class="staff-details">
-                                </p>
-                                <p class="staff-details"></p>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
-                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                            </div>
-                            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8 profile-desc">
-                                <h5></h5>
-                                <p class="staff-post"></p>
-                                <p class="staff-details">
-                                </p>
-                                <p class="staff-details"></p>
                             </div>
                         </div>
                         <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12 profile">
@@ -679,7 +679,7 @@
  -->
 
                 <!-- Left and right controls -->
-                <!-- <a class="left carousel-control" href="mmai.html#staff-data" role="button" data-slide="prev"></a> -->
+                <a class="left carousel-control" href="mmai.html#staff-data" role="button" data-slide="prev"></a>
                 <a class="right carousel-control" href="mmai.html#staff-data" role="button" data-slide="next"></a>
             </div>
         </div>
