change cover pic focus

--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -100,7 +100,7 @@
     <div id="top-slides">
         <ul class="slides-container">
             <li>
-                <img src="images/bg_mmai_masked.jpg" alt="MSocSc In AI and Digital Media" class="img-opacity">
+                <img src="images/bg_mmai_masked.jpg" class="img_cover" alt="MSocSc In AI and Digital Media" >
                 <div class="container in-slide-content">
                     <p class="sub-title">POSTGRADUATE PROGRAMMES</p>
                     <h2 class="ma-title title-stroke" ><span class="small-letters">MSC</span> IN AI AND DIGITAL MEDIA</h2>
@@ -271,8 +271,7 @@
     </div>
     <!-- section3 -->
 
-    <div class="section" id="section4">
-            <!-- hidden-xs hidden-sm -->
+    <div class="section hidden-xs hidden-sm" id="section4">
         <div id="prog-Staff" class="row">
 
             <div id="staff-data" class="carousel slide container" data-ride="carousel">
