--- a/masters/en/mmai.html
+++ b/masters/en/mmai.html
@@ -261,7 +261,7 @@
                         <div class="external-url">Browse Course Structure</div>
                     </a>
                 </div>
-                <div class="curriculum_hImage hidden-xs hidden-sm"><img src="images/programmes/cur1.JPG">
+                <div class="curriculum_hImage hidden-xs hidden-sm"><img src="images/programmes/cur1.jpeg">
                 </div>
                 <div class="curriculum_vImage hidden-xs hidden-sm"><img src="images/programmes/cur2.jpg">
                 </div>
@@ -732,7 +732,7 @@
                     </a>
 
                 </div>
-                <div class="requirments_hImage hidden-xs hidden-sm"><img src="images/programmes/ad2.jpg">
+                <div class="requirments_hImage hidden-xs hidden-sm"><img src="images/programmes/ad2.jpeg">
                 </div>
                 <div class="requirments_vImage hidden-xs hidden-sm"><img src="images/programmes/ad1.JPG">
                 </div>
